
This file lists the most important changes to
the previous released version. For a full list of changes
please refer to the ChangeLog file.

New for version 2.9+:
 - Add third locking method if file-based lock does not work.
   https://salsa.debian.org/minicom-team/minicom/-/issues/9
 - Make colors enabled the default.
 - Code cleanups.

New for version 2.9:
 - Change Hardware Flow Control Default to No.
 - Timestamping mode is now saved and restored.
 - Split "Screen and Keyboard" menu into two menus.
 - Update to gettext-0.21.
 - Change return values of --help and --version to success.
 - Support higher baud rates on MacOS
 - Save character send delay to config file
 - Save newline send delay to config file
 - Update translations: Romanian, German, French, Norwegian/Bookmal, Polish,
                        Serbian, Swedish
 - New translation: Georgian, Korean

  BEFORE release, give translation team approx. 2 weeks to update
  translations (mail to coordinator@translationproject.org with
  pointer to minicom-x.y-rc.tar.gz).

New for version 2.8:
 - Moved project to https://salsa.debian.org/minicom-team/minicom
 - New timestamp mode: Delta to previous line.
 - Add HPA ESC sequence
 - Add alternative window support (ti/te)
 - Fix file name of non-global configuration settings.
 - Update translations:
     Indonesian, French, Swedish, Spanish, German, Brazilian Portuguese,
     Vietnamese, Polish, Danish, Norwegian, Serbian
 - New translation: Serbian, Simplified chinese
 - Fix F10 macro key used in current setups
 - Add F11 and F12 for macro use
 - Fixed DTR for recent systems
 - Add support for RS485.
 - Add --capturefile-buffer-mode option
 - Bug fixes

New for version 2.7:
 - Configurable status line via -F option, see manpage for a listing
   of format specifier.
 - Improve display of device name in status line.
 - Script: Binary transmission feature via "!<"
 - Fixes.

New for version 2.6.2:
 - Alternative hex output (to be improved)